Remove dead code from src/middleware
Removed:
- rate-limiting.ts + rate-limiting.test.ts: Duplicate of src/rate-limits/middleware.ts, never imported
- applyMiddleware from compose.ts: Duplicated composeMiddleware logic, only used in tests
- simpleRateLimitingMiddleware export: Never imported anywhere

Kept public API middleware (extractJson, extractReasoning) - used by library consumers

--- a/docs/api-reference/agents.mdx
+++ b/docs/api-reference/agents.mdx
@@ -58,10 +58,10 @@ interface Agent {
   tokens_input?: number;
   tokens_output?: number;
   tool_calls_count: number;
-  started_at?: string;
-  completed_at?: string;
+  started_at?: Date;
+  completed_at?: Date;
   duration_ms?: number;
-  created_at: string;
+  created_at: Date;
 }
 
 interface ToolCall {
@@ -72,10 +72,10 @@ interface ToolCall {
   output_inline?: string;
   output_summary?: string;
   status: "pending" | "running" | "completed" | "failed";
-  started_at?: string;
-  completed_at?: string;
+  started_at?: Date;
+  completed_at?: Date;
   duration_ms?: number;
-  created_at: string;
+  created_at: Date;
 }
 ```
 
