--- a/docs/examples/simple-ralph.mdx
+++ b/docs/examples/simple-ralph.mdx
@@ -15,6 +15,8 @@ import {
   createSmithersRoot,
   createSmithersDB,
   SmithersProvider,
+  useSmithers,
+  useQueryValue,
   Ralph,
   Codex,
 } from "smithers-orchestrator";
@@ -26,7 +28,12 @@ const executionId = db.execution.start('Simple Ralph', 'simple-ralph.tsx')
 const prd = readFileSync('./prd.md', 'utf-8')
 
 function SimpleRalph() {
-  const done = db.state.get('done') === true
+  const { db } = useSmithers();
+  const { data: done } = useQueryValue<boolean>(
+    db.db,
+    "SELECT json_extract(value, '$') as v FROM state WHERE key = ?",
+    ['done']
+  );
 
   return (
     <SmithersProvider db={db} executionId={executionId}>
