refactor(utils): remove redundant comments and clean up code style

--- a/docs/components/command.mdx
+++ b/docs/components/command.mdx
@@ -6,7 +6,7 @@ description: Shell command execution with output capture and task tracking
 # Command
 
 <Warning>
-**Planned Feature** - Not yet implemented.
+🚧 **Planned Feature** — This component is not yet implemented. The API below is a design proposal.
 </Warning>
 
 ```tsx
