--- a/docs/components/fallback-agent.mdx
+++ b/docs/components/fallback-agent.mdx
@@ -3,11 +3,11 @@ title: FallbackAgent
 description: Multi-provider failover with automatic retry
 ---
 
-<Warning>
-**Planned Feature** - Not yet implemented.
-</Warning>
-
 # FallbackAgent
+
+<Warning>
+🚧 **Planned Feature** — This component is not yet implemented. The API below is a design proposal.
+</Warning>
 
 ```tsx
 <FallbackAgent>
