--- a/docs/components/gemini.mdx
+++ b/docs/components/gemini.mdx
@@ -3,11 +3,11 @@ title: Gemini
 description: Google Gemini AI agent with multi-modal support
 ---
 
-<Warning>
-**Planned Feature** - Not yet implemented.
-</Warning>
-
 # Gemini
+
+<Warning>
+🚧 **Planned Feature** — This component is not yet implemented. The API below is a design proposal.
+</Warning>
 
 ```tsx
 <Gemini model="gemini-2.5-pro">
