--- a/docs/components/git-notes.mdx
+++ b/docs/components/git-notes.mdx
@@ -6,7 +6,7 @@ description: Add metadata to commits via git notes
 # Notes
 
 ```tsx
-import { Notes } from "smithers-orchestrator";
+import { Notes } from "smithers-orchestrator/components/Git";
 
 <Notes
   data={{
