--- a/docs/components/persona.mdx
+++ b/docs/components/persona.mdx
@@ -24,7 +24,7 @@ Persona content serializes into the prompt as a `<persona>` element.
 
 | Prop | Type | Description |
 |------|------|-------------|
-| `role` | `string` | Short role name (e.g., "security expert") |
+| `role` | `string?` | Short role name (e.g., "security expert") - optional |
 | `children` | `ReactNode` | Detailed expertise description |
 
 ## Examples
