--- a/docs/components/smithers-provider.mdx
+++ b/docs/components/smithers-provider.mdx
@@ -180,6 +180,7 @@ function MyComponent() {
     isStopRequested,   // Check if stop was requested
     isRebaseRequested, // Check if rebase was requested
     reactiveDb,        // Raw ReactiveDatabase for useQuery
+    middleware,        // Middleware array from props
   } = useSmithers();
 
   return (
