--- a/docs/components/sqlite.mdx
+++ b/docs/components/sqlite.mdx
@@ -20,7 +20,7 @@ description: Give Claude access to SQLite databases via MCP
 |------|------|---------|-------------|
 | `path` | `string` | required | Path to SQLite database file |
 | `readOnly` | `boolean` | `false` | Open in read-only mode |
-| `children` | `string` | - | Schema description for Claude |
+| `children` | `ReactNode?` | - | Schema description for Claude |
 
 ## Multiple Databases
 
