--- a/docs/components/step.mdx
+++ b/docs/components/step.mdx
@@ -24,8 +24,8 @@ Phase and Step components require `<Ralph>` or `<While>` for multi-iteration wor
 
 ## Props
 
-<ParamField path="name" type="string">
-  Name of the step for tracking and logging.
+<ParamField path="name" type="string?">
+  Name of the step for tracking and logging. Defaults to 'unnamed'.
 </ParamField>
 
 <ParamField path="children" type="ReactNode" required>
