--- a/docs/components/subagent.mdx
+++ b/docs/components/subagent.mdx
@@ -21,7 +21,7 @@ The `parallel` prop is metadata-only. For actual parallel execution, use `<Paral
 
 | Prop | Type | Default | Description |
 |------|------|---------|-------------|
-| `name` | `string` | - | Name for debugging and logging |
+| `name` | `string?` | - | Name for debugging and logging (optional) |
 | `parallel` | `boolean` | `false` | Metadata hint (does not enforce parallelism) |
 | `children` | `ReactNode` | - | Components to group |
 
