--- a/docs/components/switch.mdx
+++ b/docs/components/switch.mdx
@@ -6,7 +6,7 @@ description: Multi-way branching with persisted decision
 # Switch
 
 <Warning>
-**Planned Feature** - Not yet implemented.
+🚧 **Planned Feature** - This component is not yet implemented. The API documented below is the intended design.
 </Warning>
 
 ```tsx
