--- a/docs/examples/structured-output.mdx
+++ b/docs/examples/structured-output.mdx
@@ -100,7 +100,7 @@ Summary: Good practices overall but some security concerns.
 
 - **schema**: Zod schema enforces response structure
 - **result.structured**: Typed, validated output
-- **maxRetries**: Retries on schema validation failure
+- **schemaRetries**: Retries on schema validation failure
 - **describe()**: Guides Claude on field semantics
 
 ## Schema Tips
