--- a/docs/api-reference/phases.mdx
+++ b/docs/api-reference/phases.mdx
@@ -14,7 +14,7 @@ db.phases.complete(phaseId);
 ## Contract
 
 - **Sync:** All methods are synchronous
-- **Return shape:** snake_case fields, timestamps as ISO strings
+- **Return shape:** snake_case fields, timestamps as `Date` objects
 
 ## Methods
 
