--- a/docs/api-reference/use-command.mdx
+++ b/docs/api-reference/use-command.mdx
@@ -4,7 +4,7 @@ description: Shell command execution with output capture
 ---
 
 <Warning>
-  **Planned Feature** - Not yet implemented.
+  **Not Yet Implemented** - This hook is planned but not available. The API below is a design spec.
 </Warning>
 
 # useCommand Hook
